k8s-client2/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: odoo-client2
  labels:
    app: odoo
    client: client2
    odoo-version: "18"
