k8s-client2/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client2-odoo-svc
  namespace: odoo-client2
spec:
  selector:
    app: odoo
    client: client2
  ports:
  - name: http
    port: 8069
    targetPort: 8069
  - name: websocket
    port: 8072
    targetPort: 8072
